--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "expo-next-starter-kit",
   "version": "1.0.0",
   "description": "",
-  "main": "index.js",
+  "main": "app/index.js",
   "scripts": {
     "dev": "turbo run dev",
     "build": "turbo run build",
